cmake_minimum_required(VERSION 3.13)
project(mymuduo)

set(CMAKE_CXX_STANDARD 14)

ADD_SUBDIRECTORY(reactor/)
ADD_SUBDIRECTORY(reactor/test)
ADD_SUBDIRECTORY(base/tests)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(net)
ADD_SUBDIRECTORY(net/test)
ADD_SUBDIRECTORY(book_study/Chapter01)
ADD_SUBDIRECTORY(book_study/Chapter02)
ADD_SUBDIRECTORY(book_study/Chapter03)
ADD_SUBDIRECTORY(book_study/Chapter04)
ADD_SUBDIRECTORY(book_study/Chapter05)
ADD_SUBDIRECTORY(book_study/Chapter06)
ADD_SUBDIRECTORY(book_study/Chapter07)
ADD_SUBDIRECTORY(book_study/Chapter08)
ADD_SUBDIRECTORY(book_study/问题记载)
ADD_SUBDIRECTORY(http)
ADD_SUBDIRECTORY(http/test)

add_executable(mymuduo main.cpp)