cmake_minimum_required(VERSION 3.13)
project(mymuduo)

set(CMAKE_CXX_STANDARD 14)



add_executable(bsa bsa.cpp)
add_executable(Tprint Tprint.cpp)
add_executable(Timestame_unittest Timestame_unittest.cpp)
add_executable(Atomic_unittest Atomic_unittest.cpp)
add_executable(Exception_test Exception_test.cpp)
add_executable(Thread_test Thread_test.cpp)
add_executable(Thread_bench Thread_bench.cpp)
add_executable(Mutex_test Mutex_test.cpp)
add_executable(BlockingQueue_bench BlockingQueue_bench.cpp)
add_executable(BlockingQueue_test BlockingQueue_test.cpp)
add_executable(ThreadPool_test ThreadPool_test.cpp)
add_executable(Singleton_test Singleton_test.cpp)
target_link_libraries(Singleton_test base)
target_link_libraries(Timestame_unittest base)
target_link_libraries(Atomic_unittest base)
target_link_libraries(Exception_test base)
target_link_libraries(Thread_test base)
target_link_libraries(Thread_bench base)
target_link_libraries(Mutex_test base)
target_link_libraries(BlockingQueue_test base)
target_link_libraries(BlockingQueue_bench base)
target_link_libraries(ThreadPool_test base)